# ecli

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config_default.toml  env.default.sh  pyproject.toml  setup.cfg
resources/: GHCC_def.json  IUBEL.txt
webservice/: lib_async_tools.py  lib_collections.py  lib_graphql.py  lib_misc.py  main.py
webservice/sources/: GHCC.py  JUST.py  OPENJUSTICE.py  RVSCDE.py  __init__.py
