# ==========
# setuptools
# ==========
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = ecli
version = 1
description = OpenJustice ECLI
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    ECLI
license = GNU Affero General Public License v3
license_files = LICENSE
platform = any
# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU Affero General Public License v3
    Development Status :: 4 - Beta
    Operating System :: POSIX
    Framework :: AsyncIO
    Intended Audience :: Other Audience
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Natural Language :: French
author = Pieterjan Montens
author_email = pieterjan@montens.net
# url = 

[options]
python_requires = >=3.8
install_requires =
    asyncpg
    fastapi
    pytz
    PyYAML
    uvicorn
tests_require = ${options.extras_require:dev}
zip_safe = False
package_dir =
    =./
packages = find_namespace:

[options.packages.find]
where = ./

[options.extras_require]
dev =
    flake8
    isort
    pylint


[options.entry_points]
console_scripts =
    run-api = webservice.main:main


[flake8]
max-line-length = 100
ignore = E501, F811, E128, E402, W503
exclude = .venv .git .eggs .tox
filterwarnings =
  ignore::FutureWarning

[tool:isort]
multi_line_output=3
use_parentheses=True
combine_as_imports=True

[tool:pytest]
testpaths = tests
addopts = --verbosity=2 --cov=andi.webservice
